--- a/src/index.scss
+++ b/src/index.scss
@@ -19,7 +19,12 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+p,
+body
+h2,
+h3,
+h4,
+h5 {
   margin: 0;
   padding: 0;
 }
@@ -27,6 +32,12 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+img {
+  display: block;
+  height: auto;
+  max-width: 100%;
 }
 
 button {
