feature - remove material container

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,12 +15,14 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 p,
-body
+html,
+body,
 h2,
 h3,
 h4,
